add ability to click to start the game. begin making reset button and initialize functional

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<h2 id="startMsg">Start the game by picking a color.</h2>
 	<h2 id="msg"></h2>
   <section id="startBtns">
-    <button  id="whiteStrtBtn">White</button>
-    <button  id="blackStrtBtn">Black</button>
+    <button id="whiteStartBtn">White</button>
+    <button id="blackStartBtn">Black</button>
     </div>
   </section>
 	<section id="board">
