begin to enable css changes on clicks

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,28 +8,32 @@
   <title>Document</title>
   <script defer src="./js/app.js"></script>
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
+
 <body>
   <h1>Connect Four</h1>
-	<h2 id="startMsg">Start the game by picking a color.</h2>
-	<h2 id="msg"></h2>
-  <section id="startBtns">
-    <button id="whiteStartBtn">White</button>
-    <button id="blackStartBtn">Black</button>
-    </div>
+  <section id='top-section'>
+    <h2 id="startMsg">Start the game by picking a color.</h2>
+    <h2 id="msg"></h2>
+    <section id="startBtns">
+      <button id="whiteStartBtn">White</button>
+      <button id="blackStartBtn">Black</button>
+      </div>
+    </section>
   </section>
-	<section id="board">
-		<div class="circle" id="0"></div>
-		<div class="circle" id="1"></div>
-		<div class="circle" id="2"></div>
-		<div class="circle" id="3"></div>
-		<div class="circle" id="4"></div>
-		<div class="circle" id="5"></div>
-		<div class="circle" id="6"></div>
-		<div class="circle" id="7"></div>
-		<div class="circle" id="8"></div>
+  <section id="board">
+    <div class="circle" id="0"></div>
+    <div class="circle" id="1"></div>
+    <div class="circle" id="2"></div>
+    <div class="circle" id="3"></div>
+    <div class="circle" id="4"></div>
+    <div class="circle" id="5"></div>
+    <div class="circle" id="6"></div>
+    <div class="circle" id="7"></div>
+    <div class="circle" id="8"></div>
     <div class="circle" id="9"></div>
     <div class="circle" id="10"></div>
     <div class="circle" id="11"></div>
@@ -50,7 +55,8 @@
     <div class="circle" id="27"></div>
     <div class="circle" id="28"></div>
     <div class="circle" id="29"></div>
-	</section>
-	<section class="btn"><button id="resetBtn" type="reset">Reset</button></div>
+  </section>
+  <section class="btn"><button id="resetBtn" type="reset">Reset</button></div>
 </body>
+
 </html>
