--- a/index.html
+++ b/index.html
@@ -24,37 +24,46 @@
       </div>
     </section>
   </section>
-  <section id="board">
-    <div class="circle" id="0"></div>
-    <div class="circle" id="1"></div>
-    <div class="circle" id="2"></div>
-    <div class="circle" id="3"></div>
-    <div class="circle" id="4"></div>
-    <div class="circle" id="5"></div>
-    <div class="circle" id="6"></div>
-    <div class="circle" id="7"></div>
-    <div class="circle" id="8"></div>
-    <div class="circle" id="9"></div>
-    <div class="circle" id="10"></div>
-    <div class="circle" id="11"></div>
-    <div class="circle" id="12"></div>
-    <div class="circle" id="13"></div>
-    <div class="circle" id="14"></div>
-    <div class="circle" id="15"></div>
-    <div class="circle" id="16"></div>
-    <div class="circle" id="17"></div>
-    <div class="circle" id="18"></div>
-    <div class="circle" id="19"></div>
-    <div class="circle" id="20"></div>
-    <div class="circle" id="21"></div>
-    <div class="circle" id="22"></div>
-    <div class="circle" id="23"></div>
-    <div class="circle" id="24"></div>
-    <div class="circle" id="25"></div>
-    <div class="circle" id="26"></div>
-    <div class="circle" id="27"></div>
-    <div class="circle" id="28"></div>
-    <div class="circle" id="29"></div>
+  <section class="columns">
+    <div id="column0"></div>
+    <div id="column1"></div>
+    <div id="column2"></div>
+    <div id="column3"></div>
+    <div id="column4"></div>
+    <div id="column5"></div>
+    <div id="column6"></div>
+  </section>   
+  <section id="board" class="flex-container">
+    <div class="circle" id="cr0r0"></div>
+    <div class="circle" id="cr1r1"></div>
+    <div class="circle" id="cr2r2"></div>
+    <div class="circle" id="cr3r3"></div>
+    <div class="circle" id="cr4r4"></div>
+    <div class="circle" id="cr5r5"></div>
+    <div class="circle" id="cr0r6"></div>
+    <div class="circle" id="cr1r7"></div>
+    <div class="circle" id="cr2r8"></div>
+    <div class="circle" id="cr3r9"></div>
+    <div class="circle" id="cr4r10"></div>
+    <div class="circle" id="cr5r11"></div>
+    <div class="circle" id="cr0r12"></div>
+    <div class="circle" id="cr1r13"></div>
+    <div class="circle" id="cr2r14"></div>
+    <div class="circle" id="cr3r15"></div>
+    <div class="circle" id="cr4r16"></div>
+    <div class="circle" id="cr5r17"></div>
+    <div class="circle" id="cr0r18"></div>
+    <div class="circle" id="cr1r19"></div>
+    <div class="circle" id="cr2r20"></div>
+    <div class="circle" id="cr3r21"></div>
+    <div class="circle" id="cr422"></div>
+    <div class="circle" id="cr5r23"></div>
+    <div class="circle" id="cr0r24"></div>
+    <div class="circle" id="cr1r25"></div>
+    <div class="circle" id="cr2r26"></div>
+    <div class="circle" id="cr3r27"></div>
+    <div class="circle" id="cr4r28"></div>
+    <div class="circle" id="cr5r29"></div>
   </section>
   <section class="btn"><button id="resetBtn" type="reset">Reset</button></div>
 </body>
