change board size

--- a/index.html
+++ b/index.html
@@ -34,36 +34,49 @@
     <div id="column6"></div>
   </section>   
   <section id="board" class="flex-container">
-    <div class="circle" id="cr0r0"></div>
-    <div class="circle" id="cr1r1"></div>
-    <div class="circle" id="cr2r2"></div>
-    <div class="circle" id="cr3r3"></div>
-    <div class="circle" id="cr4r4"></div>
-    <div class="circle" id="cr5r5"></div>
-    <div class="circle" id="cr0r6"></div>
-    <div class="circle" id="cr1r7"></div>
-    <div class="circle" id="cr2r8"></div>
-    <div class="circle" id="cr3r9"></div>
-    <div class="circle" id="cr4r10"></div>
-    <div class="circle" id="cr5r11"></div>
-    <div class="circle" id="cr0r12"></div>
-    <div class="circle" id="cr1r13"></div>
-    <div class="circle" id="cr2r14"></div>
-    <div class="circle" id="cr3r15"></div>
-    <div class="circle" id="cr4r16"></div>
-    <div class="circle" id="cr5r17"></div>
-    <div class="circle" id="cr0r18"></div>
-    <div class="circle" id="cr1r19"></div>
-    <div class="circle" id="cr2r20"></div>
-    <div class="circle" id="cr3r21"></div>
-    <div class="circle" id="cr422"></div>
-    <div class="circle" id="cr5r23"></div>
-    <div class="circle" id="cr0r24"></div>
-    <div class="circle" id="cr1r25"></div>
-    <div class="circle" id="cr2r26"></div>
-    <div class="circle" id="cr3r27"></div>
-    <div class="circle" id="cr4r28"></div>
-    <div class="circle" id="cr5r29"></div>
+    <div class="circle" id="cl0num0"></div>
+    <div class="circle" id="cl1num1"></div>
+    <div class="circle" id="cl2num2"></div>
+    <div class="circle" id="cl3num3"></div>
+    <div class="circle" id="cl4num4"></div>
+    <div class="circle" id="cl5num5"></div>
+    <div class="circle" id="cl6num6"></div>
+    <div class="circle" id="cl0num7"></div>
+    <div class="circle" id="cl1num8"></div>
+    <div class="circle" id="cl2num9"></div>
+    <div class="circle" id="cl3num10"></div>
+    <div class="circle" id="cl4num11"></div>
+    <div class="circle" id="cl5num12"></div>
+    <div class="circle" id="cl6num13"></div>
+    <div class="circle" id="cl0num14"></div>
+    <div class="circle" id="cl1num15"></div>
+    <div class="circle" id="cl2num16"></div>
+    <div class="circle" id="cl3num17"></div>
+    <div class="circle" id="cl4num18"></div>
+    <div class="circle" id="cl5num19"></div>
+    <div class="circle" id="cl6num20"></div>
+    <div class="circle" id="cl0num21"></div>
+    <div class="circle" id="cl1num22"></div>
+    <div class="circle" id="cl2num23"></div>
+    <div class="circle" id="cl3num24"></div>
+    <div class="circle" id="cl4num25"></div>
+    <div class="circle" id="cl5num26"></div>
+    <div class="circle" id="cl6num27"></div>
+    <div class="circle" id="cl0num28"></div>
+    <div class="circle" id="cl1num29"></div>
+    <div class="circle" id="cl2num30"></div>
+    <div class="circle" id="cl3num31"></div>
+    <div class="circle" id="cl4num32"></div>
+    <div class="circle" id="cl5num33"></div>
+    <div class="circle" id="cl6num34"></div>
+    <div class="circle" id="cl0num35"></div>
+    <div class="circle" id="cl1num36"></div>
+    <div class="circle" id="cl2num37"></div>
+    <div class="circle" id="cl3num38"></div>
+    <div class="circle" id="cl4num39"></div>
+    <div class="circle" id="cl5num40"></div>
+    <div class="circle" id="cl6num41"></div>
+    
   </section>
   <section class="btn"><button id="resetBtn" type="reset">Reset</button></div>
 </body>
