add playerTurn value at init function

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2 id="msg"></h2>
     <section id="startBtns">
       <button id="whiteStartBtn">White</button>
-      <button id="blackStartBtn">Black</button>
+      <button id="grayStartBtn">Gray</button>
       </div>
     </section>
   </section>
