clean up code for initial deployment

--- a/index.html
+++ b/index.html
@@ -34,48 +34,48 @@
     <div id="column6"></div>
   </section>   
   <section id="board" class="flex-container">
-    <div class="circle" id="cl0num0"></div>
-    <div class="circle" id="cl1num1"></div>
-    <div class="circle" id="cl2num2"></div>
-    <div class="circle" id="cl3num3"></div>
-    <div class="circle" id="cl4num4"></div>
-    <div class="circle" id="cl5num5"></div>
-    <div class="circle" id="cl6num6"></div>
-    <div class="circle" id="cl0num7"></div>
-    <div class="circle" id="cl1num8"></div>
-    <div class="circle" id="cl2num9"></div>
-    <div class="circle" id="cl3num10"></div>
-    <div class="circle" id="cl4num11"></div>
-    <div class="circle" id="cl5num12"></div>
-    <div class="circle" id="cl6num13"></div>
-    <div class="circle" id="cl0num14"></div>
-    <div class="circle" id="cl1num15"></div>
-    <div class="circle" id="cl2num16"></div>
-    <div class="circle" id="cl3num17"></div>
-    <div class="circle" id="cl4num18"></div>
-    <div class="circle" id="cl5num19"></div>
-    <div class="circle" id="cl6num20"></div>
-    <div class="circle" id="cl0num21"></div>
-    <div class="circle" id="cl1num22"></div>
-    <div class="circle" id="cl2num23"></div>
-    <div class="circle" id="cl3num24"></div>
-    <div class="circle" id="cl4num25"></div>
-    <div class="circle" id="cl5num26"></div>
-    <div class="circle" id="cl6num27"></div>
-    <div class="circle" id="cl0num28"></div>
-    <div class="circle" id="cl1num29"></div>
-    <div class="circle" id="cl2num30"></div>
-    <div class="circle" id="cl3num31"></div>
-    <div class="circle" id="cl4num32"></div>
-    <div class="circle" id="cl5num33"></div>
-    <div class="circle" id="cl6num34"></div>
-    <div class="circle" id="cl0num35"></div>
-    <div class="circle" id="cl1num36"></div>
-    <div class="circle" id="cl2num37"></div>
-    <div class="circle" id="cl3num38"></div>
-    <div class="circle" id="cl4num39"></div>
-    <div class="circle" id="cl5num40"></div>
-    <div class="circle" id="cl6num41"></div>
+    <div class="circle" id="cl0r0num0"></div>
+    <div class="circle" id="cl1r0num1"></div>
+    <div class="circle" id="cl2r0num2"></div>
+    <div class="circle" id="cl3r0num3"></div>
+    <div class="circle" id="cl4r0num4"></div>
+    <div class="circle" id="cl5r0num5"></div>
+    <div class="circle" id="cl6r0num6"></div>
+    <div class="circle" id="cl0r1num7"></div>
+    <div class="circle" id="cl1r1num8"></div>
+    <div class="circle" id="cl2r1num9"></div>
+    <div class="circle" id="cl3r1num10"></div>
+    <div class="circle" id="cl4r1num11"></div>
+    <div class="circle" id="cl5r1num12"></div>
+    <div class="circle" id="cl6r1num13"></div>
+    <div class="circle" id="cl0r2num14"></div>
+    <div class="circle" id="cl1r2num15"></div>
+    <div class="circle" id="cl2r2num16"></div>
+    <div class="circle" id="cl3r2num17"></div>
+    <div class="circle" id="cl4r2num18"></div>
+    <div class="circle" id="cl5r2num19"></div>
+    <div class="circle" id="cl6r2num20"></div>
+    <div class="circle" id="cl0r3num21"></div>
+    <div class="circle" id="cl1r3num22"></div>
+    <div class="circle" id="cl2r3num23"></div>
+    <div class="circle" id="cl3r3num24"></div>
+    <div class="circle" id="cl4r3num25"></div>
+    <div class="circle" id="cl5r3num26"></div>
+    <div class="circle" id="cl6r3num27"></div>
+    <div class="circle" id="cl0r4num28"></div>
+    <div class="circle" id="cl1r4num29"></div>
+    <div class="circle" id="cl2r4num30"></div>
+    <div class="circle" id="cl3r4num31"></div>
+    <div class="circle" id="cl4r4num32"></div>
+    <div class="circle" id="cl5r4num33"></div>
+    <div class="circle" id="cl6r4num34"></div>
+    <div class="circle" id="cl0r5num35"></div>
+    <div class="circle" id="cl1r5num36"></div>
+    <div class="circle" id="cl2r5num37"></div>
+    <div class="circle" id="cl3r5num38"></div>
+    <div class="circle" id="cl4r5num39"></div>
+    <div class="circle" id="cl5r5num40"></div>
+    <div class="circle" id="cl6r5num41"></div>
     
   </section>
   <section class="btn"><button id="resetBtn" type="reset">Reset</button></div>
