--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <h1>Connect Four</h1>
   <section id='top-section'>
-    <h2 id="startMsg">Start the game by picking a color.</h2>
+    <h2 id="startMsg"></h2>
     <h2 id="msg"></h2>
     <section id="startBtns">
       <button id="whiteStartBtn">White</button>
