format css to grid layout

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+  <div></div>
+  <div>
   <h1>Connect Four</h1>
   <section id='top-section'>
     <h2 id="startMsg"></h2>
@@ -21,7 +23,6 @@
     <section id="startBtns">
       <button id="whiteStartBtn">White</button>
       <button id="grayStartBtn">Gray</button>
-      </div>
     </section>
   </section>
   <section class="columns">
@@ -33,52 +34,56 @@
     <div id="column5"></div>
     <div id="column6"></div>
   </section>   
-  <section id="board" class="flex-container">
-    <div class="circle" id="cl0r0num00"></div>
-    <div class="circle" id="cl1r0num01"></div>
-    <div class="circle" id="cl2r0num02"></div>
-    <div class="circle" id="cl3r0num03"></div>
-    <div class="circle" id="cl4r0num04"></div>
-    <div class="circle" id="cl5r0num05"></div>
-    <div class="circle" id="cl6r0num06"></div>
-    <div class="circle" id="cl0r1num07"></div>
-    <div class="circle" id="cl1r1num08"></div>
-    <div class="circle" id="cl2r1num09"></div>
-    <div class="circle" id="cl3r1num10"></div>
-    <div class="circle" id="cl4r1num11"></div>
-    <div class="circle" id="cl5r1num12"></div>
-    <div class="circle" id="cl6r1num13"></div>
-    <div class="circle" id="cl0r2num14"></div>
-    <div class="circle" id="cl1r2num15"></div>
-    <div class="circle" id="cl2r2num16"></div>
-    <div class="circle" id="cl3r2num17"></div>
-    <div class="circle" id="cl4r2num18"></div>
-    <div class="circle" id="cl5r2num19"></div>
-    <div class="circle" id="cl6r2num20"></div>
-    <div class="circle" id="cl0r3num21"></div>
-    <div class="circle" id="cl1r3num22"></div>
-    <div class="circle" id="cl2r3num23"></div>
-    <div class="circle" id="cl3r3num24"></div>
-    <div class="circle" id="cl4r3num25"></div>
-    <div class="circle" id="cl5r3num26"></div>
-    <div class="circle" id="cl6r3num27"></div>
-    <div class="circle" id="cl0r4num28"></div>
-    <div class="circle" id="cl1r4num29"></div>
-    <div class="circle" id="cl2r4num30"></div>
-    <div class="circle" id="cl3r4num31"></div>
-    <div class="circle" id="cl4r4num32"></div>
-    <div class="circle" id="cl5r4num33"></div>
-    <div class="circle" id="cl6r4num34"></div>
-    <div class="circle" id="cl0r5num35"></div>
-    <div class="circle" id="cl1r5num36"></div>
-    <div class="circle" id="cl2r5num37"></div>
-    <div class="circle" id="cl3r5num38"></div>
-    <div class="circle" id="cl4r5num39"></div>
-    <div class="circle" id="cl5r5num40"></div>
-    <div class="circle" id="cl6r5num41"></div>
-    
-  </section>
-  <section class="btn"><button id="resetBtn" type="reset">Reset</button></div>
+</div>
+<div></div>
+<div></div>
+<section id="board" class="flex-container">
+  <div class="circle" id="cl0r0num00"></div>
+  <div class="circle" id="cl1r0num01"></div>
+  <div class="circle" id="cl2r0num02"></div>
+  <div class="circle" id="cl3r0num03"></div>
+  <div class="circle" id="cl4r0num04"></div>
+  <div class="circle" id="cl5r0num05"></div>
+  <div class="circle" id="cl6r0num06"></div>
+  <div class="circle" id="cl0r1num07"></div>
+  <div class="circle" id="cl1r1num08"></div>
+  <div class="circle" id="cl2r1num09"></div>
+  <div class="circle" id="cl3r1num10"></div>
+  <div class="circle" id="cl4r1num11"></div>
+  <div class="circle" id="cl5r1num12"></div>
+  <div class="circle" id="cl6r1num13"></div>
+  <div class="circle" id="cl0r2num14"></div>
+  <div class="circle" id="cl1r2num15"></div>
+  <div class="circle" id="cl2r2num16"></div>
+  <div class="circle" id="cl3r2num17"></div>
+  <div class="circle" id="cl4r2num18"></div>
+  <div class="circle" id="cl5r2num19"></div>
+  <div class="circle" id="cl6r2num20"></div>
+  <div class="circle" id="cl0r3num21"></div>
+  <div class="circle" id="cl1r3num22"></div>
+  <div class="circle" id="cl2r3num23"></div>
+  <div class="circle" id="cl3r3num24"></div>
+  <div class="circle" id="cl4r3num25"></div>
+  <div class="circle" id="cl5r3num26"></div>
+  <div class="circle" id="cl6r3num27"></div>
+  <div class="circle" id="cl0r4num28"></div>
+  <div class="circle" id="cl1r4num29"></div>
+  <div class="circle" id="cl2r4num30"></div>
+  <div class="circle" id="cl3r4num31"></div>
+  <div class="circle" id="cl4r4num32"></div>
+  <div class="circle" id="cl5r4num33"></div>
+  <div class="circle" id="cl6r4num34"></div>
+  <div class="circle" id="cl0r5num35"></div>
+  <div class="circle" id="cl1r5num36"></div>
+  <div class="circle" id="cl2r5num37"></div>
+  <div class="circle" id="cl3r5num38"></div>
+  <div class="circle" id="cl4r5num39"></div>
+  <div class="circle" id="cl5r5num40"></div>
+  <div class="circle" id="cl6r5num41"></div>
+</section>
+<div></div>
+<div></div>
+  <section class="btn"><button id="resetBtn" type="reset" class="btbtn btn-danger">Reset</button></div>
 </body>
 
 </html>
