--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
   <div>
   <h1>Connect Four</h1>
   <section id='top-section'>
-    <h2 id="startMsg"></h2>
-    <h2 id="msg"></h2>
+    <h3 id="startMsg"></h3>
+    <h3 id="msg"></h3>
     <section id="startBtns">
-      <button id="whiteStartBtn">White</button>
-      <button id="grayStartBtn">Gray</button>
+      <button id="ylwStartBtn">Yellow</button>
+      <button id="redStartBtn">Red</button>
     </section>
   </section>
 </div>
 <div></div>
 <div></div>
 <div>
-  <section class="columns">
+  <!-- <section class="columns">
     <div id="column1"></div>
     <div id="column2"></div>
     <div id="column3"></div>
     <div id="column4"></div>
     <div id="column5"></div>
     <div id="column6"></div>
-  </section>   
+  </section>    -->
   <section id="board" class="flex-container">
     <div class="circle" id="cl0r0num00"></div>
     <div class="circle" id="cl1r0num01"></div>
