adjust board background to have max width

--- a/index.html
+++ b/index.html
@@ -21,14 +21,15 @@
     <h3 id="startMsg"></h3>
     <h3 id="msg"></h3>
     <section id="startBtns">
-      <button id="ylwStartBtn">Yellow</button>
-      <button id="redStartBtn">Red</button>
+      <button id="ylwStartBtn" class="btn btn-outline-warning">Yellow</button>
+      <button id="redStartBtn" class="btn btn-outline-danger">Red</button>
     </section>
   </section>
 </div>
 <div></div>
 <div></div>
-<div>
+<div id="container">
+  <section></section>
   <section id="board" class="flex-container">
     <div class="circle" id="cl0r0num00"></div>
     <div class="circle" id="cl1r0num01"></div>
@@ -73,10 +74,11 @@
     <div class="circle" id="cl5r5num40"></div>
     <div class="circle" id="cl6r5num41"></div>
   </section>
+<div></div>
 </div>
 <div></div>
 <div></div>
-  <section class="btn"><button id="resetBtn" type="reset" class="btbtn btn-danger">Reset</button></div>
+<section class="btn"><button id="resetBtn" type="reset" class="btn btn-danger">Reset</button>
 </body>
 
 </html>
