fix text sizing for smaller screen

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <div>
   <h1>Connect Four</h1>
   <section id='top-section'>
-    <h3 id="startMsg"></h3>
-    <h3 id="msg"></h3>
+    <p id="startMsg"></p>
+    <p id="msg"></p >
     <section id="startBtns">
       <button id="ylwStartBtn" class="btn btn-outline-warning">Yellow</button>
       <button id="redStartBtn" class="btn btn-outline-danger">Red</button>
